retrieveUnpackaged/objects/US_Account_Target__c.object
<CustomObject>
    <fields>
        <fullName>Account_Target_Program__c</fullName>
        <label>Account Target Program</label>
        <referenceTo>US_Account_Target_Program__c</referenceTo>
        <relationshipLabel>Account Targets</relationshipLabel>
        <relationshipName>Account_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Targets</relationshipLabel>
        <relationshipName>Account_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acheivement_Score__c</fullName>
        <inlineHelpText>0 = No Distribution, 1 = Distribution Last Month, 2 = Distribution This Month, 3 = Dist Last Month &amp; This Month</inlineHelpText>
        <label>Acheivement Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Category__c</fullName>
        <label>Brand Category</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Package__c</fullName>
        <label>Brand Package</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <formula>IF(Acheivement_Score__c&gt;=2,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>IMAGE( 
IF( Acheivement_Score__c &gt;= 2 , &quot;/img/samples/flag_green.gif&quot;, 
IF( Acheivement_Score__c = 1 , &quot;/img/samples/flag_yellow.gif&quot;,
&quot;/img/samples/flag_red.gif&quot;)),
&quot;Priority Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flag Displays Red when Not Distributed, Yellow when Distributed Last Month, Green when Distributed This Month or This Month AND Last Month.</inlineHelpText>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Key__c</fullName>
        <label>Match Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Group__c</fullName>
        <label>Package Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Target_Level__c</fullName>
        <label>Program Target Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Program__c</fullName>
        <formula>TEXT(Acheivement_Score__c) &amp; &quot;_&quot; &amp;Brand_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score+Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Distribution</fullName>
                <color>#FF0000</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Last Month Distribution</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution This Month</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Program__c</fullName>
        <label>Target Program</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSLR_ASGND_CUST_NBR__c</fullName>
        <label>WSLR Customer Nbr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSLR_NBR__c</fullName>
        <label>Wholesaler Nbr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Targets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Account_Target_Program__c</columns>
        <columns>NAME</columns>
        <columns>Brand_Category__c</columns>
        <columns>SKU__c</columns>
        <columns>Brand_Package__c</columns>
        <columns>Flag__c</columns>
        <columns>Acheivement_Score__c</columns>
        <columns>Target_Program__c</columns>
        <columns>Program_Target_Level__c</columns>
        <columns>Wholesaler__c</columns>
        <columns>Package_Group__c</columns>
        <columns>Match_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000000}</displayFormat>
        <label>Target Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Targets</pluralLabel>
    <recordTypes>
        <fullName>Assortment</fullName>
        <active>true</active>
        <label>Assortment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>